Closed Bug 782315 Opened 14 years ago Closed 14 years ago

GC: Cut out unnecessary work when not collecting atoms

Categories

(Core :: JavaScript Engine, defect)

All
macOS
defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: jonco, Assigned: jonco)

Details

Attachments

(1 file, 1 obsolete file)

Attached file Proposed fix (obsolete) —
At the moment, if atoms are not being collected then every atom is marked in the mark phase so that no atoms will be collected in sweep phase. It's more efficient to neither mark nor sweep the atoms in this case. Also, we can simplify things by setting the collecting flag of the atoms compartment to record whether atoms are being swept at the start of collection.
Severity: normal → minor
Hardware: x86 → All
Attached patch Proposed fixSplinter Review
Attachment #651429 - Attachment is obsolete: true
Attachment #651432 - Flags: review?(wmccloskey)
Attachment #651432 - Attachment is patch: true
Assignee: general → jcoppeard
Comment on attachment 651432 [details] [diff] [review] Proposed fix Review of attachment 651432 [details] [diff] [review]: ----------------------------------------------------------------- ::: js/src/jsgc.cpp @@ +3507,1 @@ > { Brace should be on the same line as the if.
Attachment #651432 - Flags: review?(wmccloskey) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: