Bug 782315 - GC: Cut out unnecessary work when not collecting atoms r=billm